[package]
name = "crust_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.162", features = ["derive"] }
sptr = "0.3.2"

[build-dependencies]
cbindgen = "0.24.0"
